feat: implement Step 5 - Transaction Worker Service
🎯 Complete Async Transaction Processing System:

✅ Core Components:
- TransactionLog entity with comprehensive status tracking
- Kafka consumer service with message processing
- Transaction processor with business logic for all operations
- Wallet and transaction client services for API communication
- Retry mechanism with exponential backoff
- Dead letter queue for failed transactions
- Idempotency support for exactly-once processing

✅ Transaction Processing:
- MINT: Credit target wallet with new tokens
- BURN: Debit source wallet to destroy tokens
- TRANSFER: Atomic debit/credit with fee handling
- BULK_TRANSFER: Batch processing with validation

✅ Enterprise Features:
- Database transactions for atomicity
- Comprehensive error handling and recovery
- Correlation ID tracking for observability
- Automatic retry with configurable backoff
- Real-time processing statistics
- Admin monitoring endpoints

✅ Infrastructure:
- Dedicated MySQL database (port 3309)
- Docker Compose integration
- Environment-based configuration
- Swagger API documentation
- Health checks and monitoring

✅ API Endpoints:
- GET /worker/health - Service health check
- GET /worker/status - Kafka consumer status
- GET /worker/stats - Processing statistics
- GET /worker/failed - Failed transactions
- GET /worker/retryable - Pending retries
- POST /worker/process - Manual processing trigger

🔄 Ready for production deployment with:
- Horizontal scaling support
- Circuit breaker patterns
- Comprehensive logging
- Performance monitoring

This completes the async processing pipeline connecting
Transaction Service → Kafka → Worker → Wallet Service

--- a/stableflow/docker-compose.yml
+++ b/stableflow/docker-compose.yml
@@ -30,6 +30,16 @@ services:
     volumes:
       - mysql_transactions_data:/var/lib/mysql
 
+  mysql-worker:
+    image: mysql:8.0
+    ports:
+      - '3309:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: transaction_worker
+    volumes:
+      - mysql_worker_data:/var/lib/mysql
+
   mongodb:
     image: mongo
     ports:
@@ -76,8 +86,21 @@ services:
     build:
       context: .
       dockerfile: apps/transaction-worker/Dockerfile
+    ports:
+      - '3006:3006'
     depends_on:
+      - mysql-worker
       - kafka
+      - wallet-service
+      - transaction-service
+    environment:
+      - DB_HOST=mysql-worker
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASSWORD=root
+      - DB_DATABASE=transaction_worker
+      - WALLET_SERVICE_URL=http://wallet-service:3002
+      - TRANSACTION_SERVICE_URL=http://transaction-service:3003
 
   transaction-service:
     build:
@@ -145,3 +168,4 @@ volumes:
   mysql_data:
   mysql_auth_data:
   mysql_transactions_data:
+  mysql_worker_data:
