--- a/stableflow/package.json
+++ b/stableflow/package.json
@@ -19,6 +19,8 @@
     "start:audit-service": "nest start audit-service --watch",
     "start:notification-service": "nest start notification-service --watch",
     "start:api-gateway": "nest start api-gateway --watch",
+    "start:frontend": "cd frontend && npm run dev:3010",
+    "build:frontend": "cd frontend && npm run build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
