feat: Add platform management scripts and environment documentation
🚀 Platform Management Scripts:
- start-stableflow.sh: One-command startup script with health checks
- stop-stableflow.sh: Graceful shutdown of all services
- status-stableflow.sh: Real-time platform status monitoring
- All scripts with colored output and proper error handling

🔧 Environment Configuration:
- ENVIRONMENT.md: Comprehensive environment variables documentation
- Cross-referenced all service dependencies with docker-compose.yml
- Verified database connections and service URLs for each microservice
- Added troubleshooting guide and health check endpoints

📦 Package Scripts:
- npm run start:platform: Start complete platform with one command
- npm run stop:platform: Stop all services
- npm run status:platform: Check service status
- Integrated with existing build and service scripts

🛠️ Service Dependencies Verified:
- Auth Service → mysql-auth (port 3307) ✅
- Wallet Service → mysql (port 3306) ✅
- Transaction Service → mysql-transactions (port 3308) + Wallet Service ✅
- Audit Service → mongodb (port 27017) ✅
- Transaction Worker → mysql-worker (port 3309) + Wallet + Transaction + Kafka ✅
- API Gateway → All backend services ✅
- Frontend → API Gateway ✅

Platform now supports one-command startup with automatic dependency
management, health checks, and comprehensive status monitoring.

--- a/stableflow/package.json
+++ b/stableflow/package.json
@@ -21,6 +21,9 @@
     "start:api-gateway": "nest start api-gateway --watch",
     "start:frontend": "cd frontend && npm run dev:3010",
     "build:frontend": "cd frontend && npm run build",
+    "start:platform": "./start-stableflow.sh",
+    "stop:platform": "./stop-stableflow.sh",
+    "status:platform": "./status-stableflow.sh",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
